--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install beautifulsoup4    
           pip install requests
+          pip install lxml
           python initdb.py
           python git.py
       - name: commit test.db
