--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           pip install beautifulsoup4    
           pip install requests
           pip install lxml
-          python initdb.py
           python git.py
+          python getnew.py
       - name: commit test.db
         run: | 
           git config user.name hhackk
