--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           pip install beautifulsoup4    
           pip install requests
           pip install lxml
+          pip install PyGithub
           python git.py
           python getnew.py
       - name: commit test.db
